# passman-tauri

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  data.db  tauri.conf.json
src-tauri/src/: backend.rs  cli.rs  crypto.rs  db_ops.rs  lib.rs  main.rs  password.rs  state.rs
src-tauri/src/backend/: crypto.rs  db_ops.rs  error.rs  password.rs
src/lib/: Greet.svelte
src/routes/: +page.js  +page.svelte
src/routes/login/: +page.svelte
