[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
edition = "2021"
default-run = "app"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [] }
# crypto dependencies

sha2 = "0.10.7"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
rand = "0.8.5"
typenum = "1.17.0"

hex = "0.4.3"
hex-literal = "0.4.1"
# error handling and propagation
anyhow = "1.0"
thiserror = "1.0"
# DB orm
# pwd-rs used diesel which i didn't really like, trying rusqlite
rusqlite = { version = "0.29.0", features = ["bundled"] }
# CLI frontend
cliclack = "0.1.9"
colored = "2.0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
